
- Make the TextArea a JPanel instead of a JComponent, so that it draws its
  background and set the background color to the Gutter background color. This
  prevents the parent component to shine through, which would e. g. show blue
  edges with the BufferTabs plugin installed and active.
  (Björn "Vampire" Kautler) [Merged into 5.2.x]

- Fix a bug preventing from removing an unloaded plugin
  (#3877 - Matthieu Casanova) [Merged into 5.2.x]

- The native splashscreen is removed as it was not possible to disable it
  (#3876 - Matthieu Casanova) [Merged into 5.2.x]

- Bugfix in EditPane.java related to file status checks.
  (Patch #534 - Matt Galligan) [Merged into 5.2.x]

- Fix for bug #3389 in BufferSwitcher.java where look and feel was locked to
  Metal. (Dale Anson) [Merged into 5.2.x]

- Fix for bug #3893 where PluginResURLConnection.openStream returning null for
  non existing resources made jEdit hang on Java 8, Mac OS 10.10. (Eric Le Lay)
  [Merged into 5.2.x]

- Fix bug #3671: autodetect text file encoding in HelpViewer
  (patch #540 - Eric Le Lay)
}}}
{{{ UI Improvements

- Proper button margins for Nimbus L&F (Patch #538 - Makarius)

- Floating dockables as JDialog (Patch #537 - Makarius)

- CompletionPopup should accept TAB for completion selection (Patch # 525 - Jakub Holý)

- Separated sorting of Buffer Sets and Buffer Switcher (Dale Anson)

}}}
{{{ Miscellaneous

- HelpIndex includes .txt files again. (Bug #3896 - Alan Ezust)

- MiscUtilities.openInDesktop() works with URIs on Windows now. (Alan Ezust)
  [Merged into 5.2.x]

- Properties are sorted when saved (Feature Request #342, Patch #536 - Makarius)

- Configure the JUnit task to fork off the Ant process, with manually adding the
  needed Ant libraries. This ensures that there are no unwanted classpath
  entries during test execution (Plugin Bug #1732 - Björn "Vampire" Kautler)

- Upgrade Launch4J to the latest version 3.5.0. This makes it possible to UTF-8